--- a/public/asset/css/custom.css
+++ b/public/asset/css/custom.css
@@ -36,3 +36,13 @@
     padding: 6px 12px;
     border-top: none;
 }
+
+.search-div {
+    display: flex;
+    justify-content: space-between;
+}
+
+.search-btn {
+    width: 70px;
+    text-decoration: none;
+}
