--- a/public/asset/css/app.css
+++ b/public/asset/css/app.css
@@ -12283,7 +12283,8 @@ footer .my-btn:hover {
 .services-card {
   text-align: center;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
+  height: 400px;
   padding: 28px 20px 20px 20px;
   border-bottom: 6px solid transparent;
   border-radius: 12px;
