--- a/public/asset/css/app.css
+++ b/public/asset/css/app.css
@@ -12312,6 +12312,7 @@ footer .my-btn:hover {
   width: 100px !important;
   height: 100px !important;
   margin: 0 auto;
+  padding: 15px;
   border: 5px solid #d5d5d5;
   border-radius: 50%;
   background: linear-gradient(210deg, #FFE144, #029834);
