--- a/public/asset/css/app.css
+++ b/public/asset/css/app.css
@@ -12603,7 +12603,7 @@ footer .my-btn:hover {
 }
 .blog-card .blog-img img {
   width: 100%;
-  height: 100%;
+  padding: 0px 46px;
   -o-object-fit: cover;
      object-fit: cover;
   -o-object-position: center;
@@ -14121,7 +14121,6 @@ padding: 1px 15px 10px 15px;
   margin-bottom: 0;
 }
 .distributor-section2 .distributor-section2-img {
-  width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
