--- a/public/asset/css/app.css
+++ b/public/asset/css/app.css
@@ -12589,7 +12589,7 @@ footer .my-btn:hover {
 }
 .blog-card .blog-img {
   width: 100%;
-  height: 250px;
+  /* height: 250px; */
 }
 @media (max-width: 1199.98px) {
   .blog-card .blog-img {
@@ -12602,8 +12602,9 @@ footer .my-btn:hover {
   }
 }
 .blog-card .blog-img img {
-  width: auto;
-  padding: 0px 68px;
+  width: 100%;
+  /* padding: 0px 68px; */
+  height: 260px;
   -o-object-fit: cover;
      object-fit: cover;
   -o-object-position: center;
@@ -12932,7 +12933,7 @@ footer .my-btn:hover {
      object-fit: cover;
   -o-object-position: center;
      object-position: center;
-  border-radius: 50%;
+  border-radius: 0%;
   margin-right: 20px;
 }
 @media (max-width: 1199.98px) {
@@ -13718,7 +13719,7 @@ footer .my-btn:hover {
   font-family: "Playfair Display", serif;
   text-transform: uppercase;
   line-height: 130%;
-  color: #343a40;
+  color: #153ca1;
   margin-bottom: 4px;
 }
 @media (max-width: 1199.98px) {
@@ -13735,7 +13736,7 @@ footer .my-btn:hover {
   font-size: 14px;
   font-weight: 600;
   line-height: 130%;
-  color: #343a40;
+  color: #153ca1;
   margin-bottom: 0;
 }
 @media (max-width: 1199.98px) {
@@ -14122,8 +14123,8 @@ padding: 1px 15px 10px 15px;
   margin-bottom: 0;
 }
 .distributor-section2 .distributor-section2-img {
-  width: auto;
-  height: 100%;
+  width: 100%;
+  height: 487px;
   object-fit: cover;
   object-position: center;
   border-radius: 8px 0 0 8px;
@@ -14270,4 +14271,44 @@ padding: 1px 15px 10px 15px;
   .services-page .services-col:nth-child(31) .services-card .services-icon{
     border-color: #d5d5d5 !important;
   }
+}
+
+/* Debashish */
+.download-button {
+  border: 40px;
+  text-align: center;
+  color: black !important;
+  justify-content: center !important;
+  background-color: #119708;
+  width: 330px;
+  height: 50px;
+  border-radius: 5px;
+  display: flex;
+}
+
+.download-btn {
+  color: #fff;
+  font-size: 18px;
+  padding: 12px;
+}
+
+.inquiry-product-box {
+  background-color: #0046ff;
+  justify-content: center !important;
+  text-align: center;
+  width: 130px;
+  height: 50px;
+  padding: 11px;
+  border-radius: 5px;
+}
+
+.inquiry-box-product {
+  color: #fff !important;
+}
+
+.download-section {
+  display: flex;
+  justify-content: space-between;
+  width: 485px;
+  margin: 30px 0px;
 }
